# ChangeLog for dev-util/metrics
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  07 Sep 2011; James Rowe <jnrowe@gmail.com> metrics-0.1_alpha3.ebuild:
  Keyworded x86.

  10 Aug 2011; James Rowe <jnrowe@gmail.com> metrics-0.1_alpha3.ebuild:
  Keyworded amd64.

  08 Aug 2011; James Rowe <jnrowe@gmail.com> metrics-0.1_alpha3.ebuild:
  Keyworded ~x86.

*metrics-0.1_alpha3 (11 Jul 2011)

  11 Jul 2011; James Rowe <jnrowe@gmail.com> +metrics-0.1_alpha3.ebuild,
  +metadata.xml, +watch:
  Initial ebuild, by me [417].
