@@ -5,7 +5,7 @@ DIST metrics-0.1a3.tar.gz 11750 RMD160 7eaef27a8f7c421c727ebc2fe52249aa69b5e1c6 
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk7ApvwACgkQzJrj3cAXR0lGlgCeO5k6QzTgb638ULo/NOG2TWvA
-vc8AoLHkxgQq9bdi0WrVbCComZDZOHJp
-=XVQd
+iEYEAREKAAYFAk9SYZkACgkQzJrj3cAXR0kdNwCgu2LKmrIi+3R8NQBliRwvWhqJ
+cp4AnRWuIrxAQj02/RxqQ49GK4raL5Re
+=sLsq
 -----END PGP SIGNATURE-----
