@@ -1,13 +1,13 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
 EAPI=3
 SUPPORT_PYTHON_ABIS="1"
 PYTHON_DEPEND="2:2.6"
-# 2.[45] are restricted due to bytes syntax
-# 3.* are restricted due to print and Unicode syntax
-RESTRICT_PYTHON_ABIS="2.[45] 3.*"
+# 2.5 is restricted due to bytes syntax
+# 3.* is restricted due to print and Unicode syntax
+RESTRICT_PYTHON_ABIS="2.5 3.*"
 MY_P="${P/_alpha/a}"
 
 inherit jnrowe-pypi
