@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/metrics
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  03 Mar 2012; James Rowe <jnrowe@gmail.com> metrics-0.1_alpha3.ebuild:
+  Removed Python 2.4 support.
 
   14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
   Removed redundant herd info.
